[package]
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
description = "OAuth client for Rust"
license = "MIT OR Apache-2.0"
name = "oauth-client"
readme = "README.md"
repository = "https://github.com/gifnksm/oauth-client-rs"
version = "0.5.0"
edition = "2018"

[dependencies]
base64 = "0.11"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
rand = "0.7"
ring = "0.16"
reqwest = "0.9"
time = "0.2"
